color to say if you have a subscription

--- a/src/app/pages/event/event-page/event-page.page.html
+++ b/src/app/pages/event/event-page/event-page.page.html
@@ -63,7 +63,7 @@
                 <ion-grid>
                     <ion-row class="ion-align-items-center">
                         <ion-col size="4" class="ion-text-center ion-text">
-                            <div class="boxed">
+                            <div class="boxed" [style.color]="color">
                                 Price: {{price}} $
                             </div>
                         </ion-col>
