--- a/src/app/pages/event/event-page/event-page.page.html
+++ b/src/app/pages/event/event-page/event-page.page.html
@@ -68,15 +68,15 @@
                             </div>
                         </ion-col>
                         <ion-col size="4" offset="4">
-                            <ion-button size="large" class="signUpButton">Sign up</ion-button>
+                            <ion-button size="large" class="signUpButton" (click)="onSignup()">Sign up</ion-button>
                         </ion-col>
                     </ion-row>
                 </ion-grid>
                 <ion-row>
                     <ion-col>
-                        <ion-button style="width: 100%; height: 300px;">MAPS</ion-button>
+                        <ion-button style="width: 100%; height: 300px; ">MAPS</ion-button>
                         <ion-text>
-                            <h1>{{event.locations[0]?.roomId ? "Her skal fixes room" : clubInfo.address}}</h1>
+                            <h1>{{event.locations[0]?.roomId ? "Her skal fixes room " : clubInfo.address}}</h1>
                         </ion-text>
                     </ion-col>
                 </ion-row>
@@ -87,8 +87,8 @@
 
 
 <ng-template #mobile>
-    <ion-content *ngIf="(event$ | async)?.getEvent as event">
-        <ion-card *ngIf="(clubInfo$ | async)?.clubByID as clubInfo">
+    <ion-content *ngIf="(event$ | async)?.getEvent as event ">
+        <ion-card *ngIf="(clubInfo$ | async)?.clubByID as clubInfo ">
             <ion-card-header>
                 <ion-card-title>
                     {{event.name}}
@@ -102,7 +102,7 @@
                 <ion-card-subtitle>
                     Club: {{clubInfo.name}}
                 </ion-card-subtitle>
-                <ion-card-subtitle *ngFor="let instructor of event.instructorForEvents">
+                <ion-card-subtitle *ngFor="let instructor of event.instructorForEvents ">
                     {{instructor.user.name}}
                 </ion-card-subtitle>
             </ion-card-header>
@@ -114,16 +114,16 @@
             <ion-card-content>
                 <ion-grid>
                     <ion-row>
-                        <ion-col size="4">
-                            <ion-img src="../../../../assets/img/start.jpg">
+                        <ion-col size="4 ">
+                            <ion-img src="../../../../assets/img/start.jpg ">
                             </ion-img>
                         </ion-col>
-                        <ion-col size="4">
-                            <ion-img src="../../../../assets/img/start.jpg">
+                        <ion-col size="4 ">
+                            <ion-img src="../../../../assets/img/start.jpg ">
                             </ion-img>
                         </ion-col>
-                        <ion-col size="4">
-                            <ion-img src="../../../../assets/img/start.jpg">
+                        <ion-col size="4 ">
+                            <ion-img src="../../../../assets/img/start.jpg ">
                             </ion-img>
                         </ion-col>
                     </ion-row>
@@ -132,10 +132,10 @@
         </ion-card>
         <ion-card>
             <ion-card-content>
-                <ion-button style="width: 100%; height: 300px;">Maps</ion-button>
+                <ion-button style="width: 100%; height: 300px; ">Maps</ion-button>
             </ion-card-content>
         </ion-card>
     </ion-content>
 
-    <app-mobile-signup-component [buttonText]="'Sign up'" [callback]="OnSignup"></app-mobile-signup-component>
+    <app-mobile-signup-component [buttonText]=" 'Sign up' " [callback]="onSignup "></app-mobile-signup-component>
 </ng-template>
