Event page is now good, stripe payment to be done

--- a/src/app/pages/event/event-page/event-page.page.scss
+++ b/src/app/pages/event/event-page/event-page.page.scss
@@ -1,17 +1,17 @@
 .boxed {
-    border: 1px solid black;
-    height: 100%;
-    width: 100%;
-    font-size: x-large;
-    padding: 1rem;
+  border: 1px solid black;
+  height: 100%;
+  width: 100%;
+  font-size: large;
+  padding: 1rem;
 }
 
 .signUpButton {
-    width: 100%;
-    --background: #70ad47;
+  width: 100%;
+  --background: #70ad47;
 }
 
 .heading {
-    font-size: xx-large;
-    font-weight: 400;
+  font-size: xx-large;
+  font-weight: 400;
 }
