--- a/src/app/pages/event/event-page/event-page.page.html
+++ b/src/app/pages/event/event-page/event-page.page.html
@@ -63,12 +63,13 @@
                 <ion-grid>
                     <ion-row class="ion-align-items-center">
                         <ion-col size="4" class="ion-text-center ion-text">
-                            <div class="boxed" [style.color]="color">
-                                Price: {{price}} $
+                            <div class="boxed" [style.color]="color" [style.fontSize]>
+                                {{price}}
                             </div>
                         </ion-col>
                         <ion-col size="4" offset="4">
-                            <ion-button size="large" class="signUpButton" (click)="onSignup()">Sign up</ion-button>
+                            <ion-button size="large" class="signUpButton" (click)="onSignup()" [disabled]="disabled">
+                                Sign up</ion-button>
                         </ion-col>
                     </ion-row>
                 </ion-grid>
@@ -97,7 +98,7 @@
                     From {{event.startTime | date}} To {{event.endTime | date}}
                 </ion-card-subtitle>
                 <ion-card-subtitle>
-                    Price: {{price}} $
+                    {{price}}
                 </ion-card-subtitle>
                 <ion-card-subtitle>
                     Club: {{clubInfo.name}}
@@ -137,5 +138,6 @@
         </ion-card>
     </ion-content>
 
-    <app-mobile-signup-component [buttonText]=" 'Sign up' " [callback]="onSignup "></app-mobile-signup-component>
+    <app-mobile-signup-component [buttonText]="'Sign up'" [disabled]="disabled" [callback]="onSignup ">
+    </app-mobile-signup-component>
 </ng-template>
