--- a/src/app/pages/payment/event-payment-modal/event-payment-modal.page.html
+++ b/src/app/pages/payment/event-payment-modal/event-payment-modal.page.html
@@ -1,10 +1,10 @@
 <ion-content>
-    <ion-card>
-        <ion-card-header>
-            <ion-card-title>
-                {{price}}
-            </ion-card-title>
-        </ion-card-header>
-        <app-stripe-elements></app-stripe-elements>
-    </ion-card>
+    <ion-grid class="ion-margin">
+        <ion-row class="ion-justify-content-center">
+            <h1>
+                Event payment
+            </h1>
+        </ion-row>
+    </ion-grid>
+    <app-stripe-elements [amount]="price" [description]="description"></app-stripe-elements>
 </ion-content>
