--- a/src/app/pages/event/event-page/event-page.page.html
+++ b/src/app/pages/event/event-page/event-page.page.html
@@ -77,7 +77,8 @@
                     <ion-col>
                         <ion-button style="width: 100%; height: 300px; ">MAPS</ion-button>
                         <ion-text>
-                            <h1>{{event.locations[0]?.roomId ? "Her skal fixes room " : clubInfo.address}}</h1>
+                            <h1>{{event.locations[0]?.room.roomId ? event.locations[0].room.name : clubInfo.address}}
+                            </h1>
                         </ion-text>
                     </ion-col>
                 </ion-row>
