--- a/src/app/components/header-bar/header-bar.component.html
+++ b/src/app/components/header-bar/header-bar.component.html
@@ -6,7 +6,7 @@
       <ion-button *ngIf="platform.is('desktop')" class="regular" (click)="tappedFindEvents()">Find Events</ion-button>
       <ion-button *ngIf="platform.is('desktop')" class="regular" (click)="tappedMyEvents()">My Events</ion-button>
       <ion-button *ngIf="platform.is('desktop')" class="regular" (click)="tappedMyClubs()">My Clubs</ion-button>
-      <ion-label color="dark">Welcome {{(authService.currentUser| async)?.user.name}}</ion-label>
+      <ion-label color="dark">Welcome {{authService.currentUserValue.user.name}}</ion-label>
       <ion-button class="profile" ion-item (click)="tappedProfile($event)">
         <ion-avatar>
           <img
