stripe payments work

--- a/src/app/pages/event/event-page/event-page.page.html
+++ b/src/app/pages/event/event-page/event-page.page.html
@@ -64,7 +64,7 @@
                     <ion-row class="ion-align-items-center">
                         <ion-col size="4" class="ion-text-center ion-text">
                             <div class="boxed" [style.color]="color" [style.fontSize]>
-                                {{price}}
+                                {{price}} $
                             </div>
                         </ion-col>
                         <ion-col size="4" offset="4">
@@ -99,7 +99,7 @@
                     From {{event.startTime | date}} To {{event.endTime | date}}
                 </ion-card-subtitle>
                 <ion-card-subtitle>
-                    {{price}}
+                    {{price}} $
                 </ion-card-subtitle>
                 <ion-card-subtitle>
                     Club: {{clubInfo.name}}
