--- a/src/app/pages/payment/event-payment-modal/event-payment-modal.page.html
+++ b/src/app/pages/payment/event-payment-modal/event-payment-modal.page.html
@@ -6,5 +6,6 @@
             </h1>
         </ion-row>
     </ion-grid>
-    <app-stripe-elements [amount]="price" [description]="description" [eventId]="eventId"></app-stripe-elements>
+    <app-stripe-elements [dismissModal]="dismissModal" [amount]="price" [description]="description" [eventId]="eventId">
+    </app-stripe-elements>
 </ion-content>
