--- a/src/app/components/stripe-elements/stripe-elements.component.html
+++ b/src/app/components/stripe-elements/stripe-elements.component.html
@@ -9,7 +9,8 @@
       </div>
 
       <ion-row class="ion-justify-content-center ion-margin">
-        <ion-button type="submit" [disabled]="!amount" class="ion-padding">{{ getButtonText() }}</ion-button>
+        <ion-button type="submit" [disabled]="!amount || disabled" class="ion-padding">{{ getButtonText() }}
+        </ion-button>
       </ion-row>
     </form>
   </ion-card-content>
