--- a/src/app/pages/payment/event-payment-modal/event-payment-modal.page.html
+++ b/src/app/pages/payment/event-payment-modal/event-payment-modal.page.html
@@ -2,7 +2,7 @@
     <ion-grid class="ion-margin">
         <ion-row class="ion-justify-content-center">
             <h1>
-                Event payment
+                {{description}}
             </h1>
         </ion-row>
     </ion-grid>
