--- a/src/app/pages/event/event-page/event-page.page.html
+++ b/src/app/pages/event/event-page/event-page.page.html
@@ -80,10 +80,9 @@
                 <ion-row>
                     <ion-col>
                         <ion-button style="width: 100%; height: 300px; ">MAPS</ion-button>
-                        <ion-text>
-                            <h1>{{event.locations[0]?.room.roomId ? event.locations[0].room.name : clubInfo.address}}
-                            </h1>
-                        </ion-text>
+                        <ion-row class="ion-justify-content-center ion-margin">
+                            <h1>Address: {{event.locations[0]?.room.roomId ? event.locations[0].room.name : clubInfo.address}}</h1>
+                        </ion-row>
                     </ion-col>
                 </ion-row>
             </ion-col>
