--- a/src/app/pages/event/event-page/event-page.page.scss
+++ b/src/app/pages/event/event-page/event-page.page.scss
@@ -11,6 +11,11 @@
   --background: #70ad47;
 }
 
+.verifyButton {
+  width: 100%;
+  --background: #43b3c3;
+}
+
 .heading {
   font-size: xx-large;
   font-weight: 400;
