--- a/src/app/pages/event/event-page/event-page.page.html
+++ b/src/app/pages/event/event-page/event-page.page.html
@@ -71,7 +71,7 @@
                             <ion-button *ngIf="!alreadySignedUp else alreadySignedUpButton" size="large" class="signUpButton" (click)="onSignup()" [disabled]="disabled">
                                 Sign up</ion-button>
                             <ng-template #alreadySignedUpButton>
-                                <ion-button size="large" class="signUpButton" [disabled]="disabled">Signed up!
+                                <ion-button size="large" class="verifyButton" [disabled]="disabled">Verify
                                 </ion-button>
                             </ng-template>
                         </ion-col>
