--- a/src/app/components/club-manage/club-manage-events/club-manage-events.component.html
+++ b/src/app/components/club-manage/club-manage-events/club-manage-events.component.html
@@ -34,8 +34,8 @@
         <ion-card *ngIf="selectedEvent != null">
             <ion-card-header>
               <ion-card-title>{{selectedEvent.title}}</ion-card-title>
-              <ion-card-subtitle>{{"Starttime: " + createTimeString(selectedEvent.start)}}</ion-card-subtitle>
-              <ion-card-subtitle>{{"Endtime: " + createTimeString(selectedEvent.end)}}</ion-card-subtitle>
+              <ion-card-subtitle>{{"Starttime: " + createTimeString(selectedEvent.start!)}}</ion-card-subtitle>
+              <ion-card-subtitle>{{"Endtime: " + createTimeString(selectedEvent.end!)}}</ion-card-subtitle>
             </ion-card-header>
             <ion-card-content>
               <ion-card-subtitle>
