--- a/src/app/components/club-manage/club-manage-subcriptions/club-manage-subcriptions.component.html
+++ b/src/app/components/club-manage/club-manage-subcriptions/club-manage-subcriptions.component.html
@@ -7,7 +7,7 @@
             <h2>Create New Subscription</h2>
           </div>
           <div>
-            <form [formGroup]="form" (ngSubmit)="onSubmit(form)">
+            <form [formGroup]="form" (ngSubmit)="onSubmit()">
               <div class="form-content">
                 <ion-item>
                   <ion-input formControlName="name" type="text" placeHolder="Subscription name"> </ion-input>
@@ -15,7 +15,7 @@
                 <ion-item>
                   <ion-input formControlName="price" type="number" placeHolder="Price/month"> </ion-input>
                 </ion-item>
-                <div class="selecter" *ngIf="clubSubscriptions.length > 0">
+                <div class="selecter" *ngIf="clubSubscriptions!.length > 0">
                   <ion-select formControlName="subscriptionReference" placeholder="Choose existing subscription">
                     <ion-select-option *ngFor="let sub of clubSubscriptions" [value]="sub.clubSubscriptionId">
                       {{sub.name}}
@@ -38,10 +38,10 @@
             <h1>Existing subscriptions</h1>
           </div>
           <div> 
-            <div class="ion-text-center" *ngIf="clubSubscriptions.length == 0">
+            <div class="ion-text-center" *ngIf="clubSubscriptions!.length == 0">
               <h3>No existing subscriptions</h3>
             </div>
-            <ion-list class="clear-background" *ngIf="clubSubscriptions.length > 0">
+            <ion-list class="clear-background" *ngIf="clubSubscriptions!.length > 0">
               <ion-card *ngFor="let subscription of clubSubscriptions">
                 <ion-row>
                   <ion-button class="edit-button" color="success">Edit</ion-button>
