--- a/src/app/components/profile-options/profile-options.component.html
+++ b/src/app/components/profile-options/profile-options.component.html
@@ -3,13 +3,13 @@
     <ion-label>Create Club</ion-label>
     <ion-ripple-effect></ion-ripple-effect>
   </ion-item>
-  <ion-list *ngIf="(clubs$ | async)?.length > 0">
+<!--   <ion-list *ngIf="(clubs$ | async)?.length > 0">
     <ion-item class="ion-activatable" *ngFor="let club of clubs$ | async" (click)="manageClubClicked(club.clubId)">
       <ion-label>
         {{ 'Manage club: ' + club.name }}
       </ion-label>
     </ion-item>
-  </ion-list>
+  </ion-list> -->
   <ion-item class="ion-activatable" (click)="profileClicked()">
     <ion-label>Profile</ion-label>
     <ion-ripple-effect></ion-ripple-effect>
