now can see code

--- a/src/app/pages/modals/verify-modal-user/verify-modal-user.page.html
+++ b/src/app/pages/modals/verify-modal-user/verify-modal-user.page.html
@@ -1,9 +1,22 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>VerifyModalUser</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-
+    <ion-grid>
+        <ion-row class="ion-margin">
+            <ion-col>
+                <ion-row class="ion-justify-content-center">
+                    <ion-text>
+                        <h1>
+                            Verification Code
+                        </h1>
+                    </ion-text>
+                </ion-row>
+                <ion-row class="ion-justify-content-center">
+                    <ion-text>
+                        <h1 class="codeStyle">
+                            {{code}}
+                        </h1>
+                    </ion-text>
+                </ion-row>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 </ion-content>
