works, but there is a major issue

--- a/src/app/pages/event/event-page/event-page.page.html
+++ b/src/app/pages/event/event-page/event-page.page.html
@@ -18,7 +18,7 @@
                     </ion-card-header>
                     <ion-card-content *ngFor="let instructor of event.instructorForEvents">
                         <ion-label>
-                            Instructor: {{instructor.user.name}}
+                            Instructors: {{instructor.user.name}}
                         </ion-label>
                     </ion-card-content>
                 </ion-card>
