--- a/src/app/pages/modals/verify-modal-user/verify-modal-user.page.html
+++ b/src/app/pages/modals/verify-modal-user/verify-modal-user.page.html
@@ -1,5 +1,5 @@
 <ion-content>
-    <ion-grid>
+    <ion-grid *ngIf="code else instructor">
         <ion-row class="ion-margin">
             <ion-col>
                 <ion-row class="ion-justify-content-center">
@@ -19,4 +19,29 @@
             </ion-col>
         </ion-row>
     </ion-grid>
+
+    <ng-template #instructor>
+        <ion-grid style="height: 60%;">
+            <ion-text class="ion-text-center">
+                <h1>
+                    NFC is on
+                </h1>
+            </ion-text>
+            <ion-row class="ion-justify-content-center ion-margin-top">
+                <ion-spinner class="spinner"></ion-spinner>
+            </ion-row>
+        </ion-grid>
+        <ion-text class="ion-text-center">
+            <h3>
+                Or type in the code here
+            </h3>
+            <ion-row>
+                <ion-col offset="3" size="3" style="margin-bottom: 10px;">
+                    <ion-input [(ngModel)]="instructorCode" inputmode="number" minlength="4" min="4" required placeholder="1234"></ion-input>
+                </ion-col>
+                <ion-button [disabled]="instructorCode?.length !== 4" (click)="onCodeSubmitted()">submit</ion-button>
+            </ion-row>
+        </ion-text>
+    </ng-template>
+
 </ion-content>
