--- a/src/app/pages/modals/verify-modal-user/verify-modal-user.page.scss
+++ b/src/app/pages/modals/verify-modal-user/verify-modal-user.page.scss
@@ -2,3 +2,11 @@
     font-size: xx-large;
     font-weight: bold;
 }
+
+.spinner {
+    --color: #43b3c3;
+}
+
+ion-grid {
+    margin-top: 5rem;
+}
