--- a/src/app/pages/event/myevents/myevents.page.html
+++ b/src/app/pages/event/myevents/myevents.page.html
@@ -1,9 +1,21 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>myevents</ion-title>
-  </ion-toolbar>
-</ion-header>
+<div>
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>My upcoming events</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-list>
 
-<ion-content>
+  </ion-list>
+</div>
 
-</ion-content>
+<div>
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>My past events</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-list>
+    
+  </ion-list>
+</div>
