--- a/src/app/pages/modals/verify-modal-user/verify-modal-user.page.html
+++ b/src/app/pages/modals/verify-modal-user/verify-modal-user.page.html
@@ -35,8 +35,7 @@
                     <ion-item *ngFor="let participant of participants">
                         <ion-row class="ion-justify-content-between" style="width: 200px;">
                             <ion-text>{{participant.user.name}}</ion-text>
-                            <ion-icon *ngIf="participant.status === 'SIGNEDUP' else Attending" name="close-circle"
-                                color="danger"></ion-icon>
+                            <ion-icon *ngIf="participant.status === 'SIGNEDUP' else Attending" name="close-circle" color="danger"></ion-icon>
                             <ng-template #Attending>
                                 <ion-icon name="checkmark-circle" color="primary"></ion-icon>
                             </ng-template>
@@ -49,13 +48,20 @@
             <h3>
                 Or type in the code here
             </h3>
+        </ion-text>
+        <ion-grid>
             <ion-row>
-                <ion-col offset="3" size="3" style="margin-bottom: 10px;">
-                    <ion-input [(ngModel)]="code" inputmode="number" min="4" required placeholder="1234">
+                <ion-col offset="4" size="2">
+                    <ion-input [(ngModel)]="code " inputmode="number " min="4 " required placeholder="1234 ">
                     </ion-input>
                 </ion-col>
-                <ion-button [disabled]="code?.length < 4" (click)="onCodeSubmitted()">Submit</ion-button>
+                <ion-col>
+                    <ion-button [disabled]="code?.length < 4 " (click)="onCodeSubmitted() ">Submit</ion-button>
+                </ion-col>
             </ion-row>
-        </ion-text>
+            <ion-text *ngIf="wrongCode" class="ion-text-center " color="danger ">
+                <p>{{wrongCode}}</p>
+            </ion-text>
+        </ion-grid>
     </ng-template>
 </ion-content>
